@@ -1,6 +1,7 @@
 package io.github.jinahya.enums.ordinal;
 
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.BiConsumer;
 
 public enum 六十干支 {
@@ -8,11 +9,11 @@ public enum 六十干支 {
     // empty
     ;
 
-    private static final List<天干> heavenlyStems = List.of(天干.values());
+    private static final List<天干> heavenlyStems = List.copyOf(EnumSet.allOf(天干.class));
 
-    private static final List<地支> earthlyBranches = List.of(地支.values());
+    private static final List<地支> earthlyBranches = List.copyOf(EnumSet.allOf(地支.class));
 
-    private static void acceptEachCombination(final BiConsumer<? super 天干, ? super 地支> consumer) {
+    public static void acceptEachPair(final BiConsumer<? super 天干, ? super 地支> consumer) {
         Objects.requireNonNull(consumer, "consumer is null");
         for (int s = 0, b = 0; ; s = ++s % heavenlyStems.size(), b = ++b % earthlyBranches.size()) {
             consumer.accept(heavenlyStems.get(s), earthlyBranches.get(b));
@@ -27,10 +28,10 @@ public enum 六十干支 {
 
     static {
         final List<String> names = new ArrayList<>();
-        acceptEachCombination((hs, eb) -> {
+        acceptEachPair((hs, eb) -> {
             names.add(hs.name() + eb.name());
         });
-        NAMES = Collections.unmodifiableList(names);
+        NAMES = List.copyOf(names);
     }
 
     public static List<String> names() {
@@ -38,14 +39,18 @@ public enum 六十干支 {
     }
 
     // -----------------------------------------------------------------------------------------------------------------
-    public static List<String> names(final Locale locale) {
+    private static final Map<Locale, List<String>> LOCALES_AND_DISPLAY_NAMES = new ConcurrentHashMap<>();
+
+    public static List<String> displayNames(final Locale locale) {
         Objects.requireNonNull(locale, "locale is null");
-        final var names = new ArrayList<String>();
-        acceptEachCombination((hs, eb) -> {
-            final var heavenlyStemName = hs.name(locale);
-            final var earthlyBranchName = eb.name(locale);
-            names.add(heavenlyStemName + earthlyBranchName);
+        return LOCALES_AND_DISPLAY_NAMES.computeIfAbsent(locale, l -> {
+            final var names = new ArrayList<String>();
+            acceptEachPair((hs, eb) -> {
+                final var heavenlyStemName = hs.displayName(l);
+                final var earthlyBranchName = eb.displayName(l);
+                names.add(heavenlyStemName + earthlyBranchName);
+            });
+            return names;
         });
-        return names;
     }
 }
